Changes svg Button top color

--- a/src/Styles/ui.module.scss
+++ b/src/Styles/ui.module.scss
@@ -64,6 +64,8 @@
   & img{
     width: 20px !important;
     aspect-ratio: 1/1; 
+    color:$primary-color;
+    fill: $primary-color;
     
   } 
  
